# Generated by Django 6.0.5 on 2026-06-19 05:55

import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models

import core.constants


class Migration(migrations.Migration):
    initial = True

    dependencies = [
        ("contract", "0003_publicoffer_owneronboarding"),
        ("property", "0001_initial"),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name="InventoryAct",
            fields=[
                ("id", models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name="ID")),
                ("created_at", models.DateTimeField(auto_now_add=True, db_index=True, verbose_name="Created At")),
                ("updated_at", models.DateTimeField(auto_now=True, verbose_name="Updated At")),
                ("deleted_at", models.DateTimeField(blank=True, db_index=True, null=True, verbose_name="Deleted At")),
                ("restored_at", models.DateTimeField(blank=True, null=True, verbose_name="Restored At")),
                ("transaction_id", models.UUIDField(blank=True, null=True, verbose_name="Transaction ID")),
                (
                    "act_type",
                    models.CharField(
                        choices=core.constants.InventoryActType.choices,
                        default="general",
                        max_length=20,
                        verbose_name="Act Type",
                    ),
                ),
                (
                    "status",
                    models.CharField(
                        choices=core.constants.InventoryActStatus.choices,
                        default="draft",
                        max_length=20,
                        verbose_name="Status",
                    ),
                ),
                ("notes", models.TextField(blank=True, null=True, verbose_name="Notes")),
                ("finalized_at", models.DateTimeField(blank=True, null=True, verbose_name="Finalized At")),
                (
                    "acknowledged_by_name",
                    models.CharField(blank=True, max_length=200, null=True, verbose_name="Acknowledged By Name"),
                ),
                ("acknowledged_at", models.DateTimeField(blank=True, null=True, verbose_name="Acknowledged At")),
                ("acknowledgment_note", models.TextField(blank=True, null=True, verbose_name="Acknowledgment Note")),
                (
                    "created_by",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.PROTECT,
                        related_name="created_inventory_acts",
                        to=settings.AUTH_USER_MODEL,
                        verbose_name="Created By",
                    ),
                ),
                (
                    "lease",
                    models.ForeignKey(
                        blank=True,
                        null=True,
                        on_delete=django.db.models.deletion.SET_NULL,
                        related_name="inventory_acts",
                        to="contract.lease",
                        verbose_name="Lease",
                    ),
                ),
                (
                    "property",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.PROTECT,
                        related_name="inventory_acts",
                        to="property.property",
                        verbose_name="Property",
                    ),
                ),
            ],
            options={
                "verbose_name": "Inventory Act",
                "verbose_name_plural": "Inventory Acts",
                "db_table": "inventory_acts",
                "ordering": ["-created_at"],
            },
        ),
        migrations.CreateModel(
            name="InventoryActItem",
            fields=[
                ("id", models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name="ID")),
                ("created_at", models.DateTimeField(auto_now_add=True, db_index=True, verbose_name="Created At")),
                ("updated_at", models.DateTimeField(auto_now=True, verbose_name="Updated At")),
                ("deleted_at", models.DateTimeField(blank=True, db_index=True, null=True, verbose_name="Deleted At")),
                ("restored_at", models.DateTimeField(blank=True, null=True, verbose_name="Restored At")),
                ("transaction_id", models.UUIDField(blank=True, null=True, verbose_name="Transaction ID")),
                ("area", models.CharField(max_length=120, verbose_name="Area")),
                (
                    "condition",
                    models.CharField(
                        choices=core.constants.ConditionRating.choices,
                        default="good",
                        max_length=20,
                        verbose_name="Condition",
                    ),
                ),
                ("notes", models.TextField(blank=True, null=True, verbose_name="Notes")),
                ("sort_order", models.PositiveSmallIntegerField(default=0, verbose_name="Sort Order")),
                (
                    "act",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="items",
                        to="inventory.inventoryact",
                        verbose_name="Act",
                    ),
                ),
            ],
            options={
                "verbose_name": "Inventory Act Item",
                "verbose_name_plural": "Inventory Act Items",
                "db_table": "inventory_act_items",
                "ordering": ["sort_order", "id"],
            },
        ),
        migrations.CreateModel(
            name="InventoryActPhoto",
            fields=[
                ("id", models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name="ID")),
                ("created_at", models.DateTimeField(auto_now_add=True, db_index=True, verbose_name="Created At")),
                ("updated_at", models.DateTimeField(auto_now=True, verbose_name="Updated At")),
                ("deleted_at", models.DateTimeField(blank=True, db_index=True, null=True, verbose_name="Deleted At")),
                ("restored_at", models.DateTimeField(blank=True, null=True, verbose_name="Restored At")),
                ("transaction_id", models.UUIDField(blank=True, null=True, verbose_name="Transaction ID")),
                ("image", models.ImageField(upload_to="inventory_acts/", verbose_name="Image")),
                ("caption", models.CharField(blank=True, max_length=200, null=True, verbose_name="Caption")),
                (
                    "act",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="photos",
                        to="inventory.inventoryact",
                        verbose_name="Act",
                    ),
                ),
                (
                    "item",
                    models.ForeignKey(
                        blank=True,
                        null=True,
                        on_delete=django.db.models.deletion.SET_NULL,
                        related_name="photos",
                        to="inventory.inventoryactitem",
                        verbose_name="Item",
                    ),
                ),
            ],
            options={
                "verbose_name": "Inventory Act Photo",
                "verbose_name_plural": "Inventory Act Photos",
                "db_table": "inventory_act_photos",
                "ordering": ["-created_at"],
            },
        ),
        migrations.AddIndex(
            model_name="inventoryact",
            index=models.Index(fields=["property"], name="inventory_a_propert_cc7dfa_idx"),
        ),
        migrations.AddIndex(
            model_name="inventoryact",
            index=models.Index(fields=["lease"], name="inventory_a_lease_i_cf64d4_idx"),
        ),
        migrations.AddIndex(
            model_name="inventoryact",
            index=models.Index(fields=["status"], name="inventory_a_status_37a6cc_idx"),
        ),
        migrations.AddIndex(
            model_name="inventoryactitem",
            index=models.Index(fields=["act"], name="inventory_a_act_id_f4b518_idx"),
        ),
        migrations.AddIndex(
            model_name="inventoryactphoto",
            index=models.Index(fields=["act"], name="inventory_a_act_id_a9fcf8_idx"),
        ),
    ]
